Fix for Divi z-index bug

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -5,7 +5,7 @@ Description: UW-Oshkosh's Divi Child Theme
 Author: Joseph Kerkhof
 Author URI: http://twitter.com/musicaljoeker
 Template: Divi
-Version: 1.4.5
+Version: 1.4.6
 */
 
 // Font family
@@ -161,7 +161,6 @@ header #logo {
   line-height: 16px;
 }
 
-/* made some additions here dude */
 .emergency-banner-wrapper.disabled {
   display: none;
 }
@@ -297,8 +296,6 @@ header #logo {
   }
 }
 
-/* ending additions here dude */
-
 #top-menu-nav {
   float: right !important;
   padding-right: 72px;
@@ -368,6 +365,10 @@ header #logo {
 
 #top-menu a {
   color: $titan-grey !important;
+}
+
+.et_pb_fullwidth_section .et_pb_row {
+  z-index: auto !important;
 }
 
 .display-search {
